# TAXLANE

./: .gitignore  Cargo.toml  PRODUCT_PLAN.md  README.md
.roles/: ROLE.md  T-1-taxpayer-advocate.md  T-2-budget-accountant.md  T-3-source-custodian.md  T-4-public-goods-steward.md  T-5-program-beneficiary.md  T-6-compliance-burden.md  T-7-fiscal-sustainability.md  T-8-reform-skeptic.md
context/waves/: PHASES.md
data/: README.md
research/: HANDOFF.md  README.md  RESEARCH.md  REVIEWERS.md
reviews/: 2026-06-21-first-slice-budget-review.md  2026-06-21-irs-rates-source-review.md  2026-06-21-omb-fund-group-source-review.md  2026-06-21-omb-outlays-source-review.md  2026-06-21-omb-receipts-source-review.md  2026-06-21-plan-role-review.md  2026-06-22-lane-crosswalk-role-review.md  2026-06-22-placeholder-display-spec-role-review.md  2026-06-22-placeholder-receipt-role-review.md  2026-06-22-subfunction-reader-role-review.md  2026-06-23-accountability-action-queue-review.md  2026-06-23-accountability-artifact-map-demand-handoff-review.md  2026-06-23-accountability-artifact-map-review.md  2026-06-23-accountability-brief-discovery-review.md  2026-06-23-accountability-claim-guard-report-review.md  2026-06-23-accountability-core-workflow-review.md  2026-06-23-accountability-demand-checklist-core-contract-review.md  2026-06-23-accountability-demand-checklist-jsonl-read-validation-review.md  2026-06-23-accountability-demand-checklist-schema-review.md  2026-06-23-accountability-evidence-only-record-review.md  (+63 more)
tools/taxlane/: Cargo.toml
tools/taxlane/src/: main.rs
(+679 files in other folders)
