[package]
name = "taxlane-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
roxmltree = "0.20"
taxlane-core = { path = "../../crates/taxlane-core" }
zip = { version = "2", default-features = false, features = ["deflate"] }
